Use mutex for lwp/interrupt coordination. using splX() simply does not work on multiprocessor systems.

fixes PR kern/55506